#
# modelnet  Makefile.am
#
#     automake the directories configure decides to build
#
# author David Becker 
# Copyright (c) 2003 Duke University  All rights reserved.
# See COPYING for license statement.
#

## Process this file with automake to produce Makefile.in

SUBDIRS = @DIRS@
DIST_SUBDIRS = doc module src example debian
